Fix scroll on mobile

--- a/app/javascript/pawoo_music/components/scrollable_list/scrollable_list.scss
+++ b/app/javascript/pawoo_music/components/scrollable_list/scrollable_list.scss
@@ -4,3 +4,7 @@
   .scrollable {
   }
 }
+
+.sp .scrollable {
+  overflow-y: scroll;
+}
